--- a/NISTify_AI.ipynb
+++ b/NISTify_AI.ipynb
@@ -195,10 +195,10 @@
       ],
       "metadata": {
         "id": "DBkv05djen6r",
-        "outputId": "059a80f8-23e6-4c85-bc53-3e761d8ed8d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "059a80f8-23e6-4c85-bc53-3e761d8ed8d5"
       },
       "execution_count": 6,
       "outputs": [
@@ -235,11 +235,11 @@
         "!pip show google-search-results\n"
       ],
       "metadata": {
-        "id": "iku3IFAW1zBv",
-        "outputId": "e0327da7-8674-45dc-f614-851def1a9c5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iku3IFAW1zBv",
+        "outputId": "e0327da7-8674-45dc-f614-851def1a9c5c"
       },
       "execution_count": 8,
       "outputs": [
@@ -268,11 +268,11 @@
         "print(sys.executable)\n"
       ],
       "metadata": {
-        "id": "qdXiPt-G2VDR",
-        "outputId": "cd32db63-4053-413c-83cc-000faf26b94a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qdXiPt-G2VDR",
+        "outputId": "cd32db63-4053-413c-83cc-000faf26b94a"
       },
       "execution_count": 9,
       "outputs": [
@@ -291,11 +291,11 @@
         "!which pip\n"
       ],
       "metadata": {
-        "id": "I5R8SbCO1WeQ",
-        "outputId": "1d6093d5-e2c1-49db-9724-3edfe22b00c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I5R8SbCO1WeQ",
+        "outputId": "1d6093d5-e2c1-49db-9724-3edfe22b00c1"
       },
       "execution_count": 10,
       "outputs": [
@@ -314,11 +314,11 @@
         "!pip show google-search-results\n"
       ],
       "metadata": {
-        "id": "7D7FH6wg2aSX",
-        "outputId": "ce9892c7-9a02-4516-d28f-18693cf4d3ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7D7FH6wg2aSX",
+        "outputId": "ce9892c7-9a02-4516-d28f-18693cf4d3ce"
       },
       "execution_count": 11,
       "outputs": [
@@ -363,11 +363,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "IBcggVdf2k13",
-        "outputId": "ad40dc83-732c-4f2a-e071-e695d429f192",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IBcggVdf2k13",
+        "outputId": "ad40dc83-732c-4f2a-e071-e695d429f192"
       },
       "execution_count": 14,
       "outputs": [
@@ -398,11 +398,11 @@
         "!{sys.executable} -m pip install --force-reinstall google-search-results\n"
       ],
       "metadata": {
-        "id": "QV3tzsj-343Q",
-        "outputId": "5a6e7b80-6463-47bb-b491-7b61ca890b50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QV3tzsj-343Q",
+        "outputId": "5a6e7b80-6463-47bb-b491-7b61ca890b50"
       },
       "execution_count": 15,
       "outputs": [
@@ -469,11 +469,11 @@
         "print(\"Import successful!\")\n"
       ],
       "metadata": {
-        "id": "QiYFU16a3-M3",
-        "outputId": "66540483-d201-4c92-8947-d479d021c656",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QiYFU16a3-M3",
+        "outputId": "66540483-d201-4c92-8947-d479d021c656"
       },
       "execution_count": 16,
       "outputs": [
@@ -862,10 +862,48 @@
         "demo.launch()\n"
       ],
       "metadata": {
-        "id": "dXV3P8pUyzE_"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 646
+        },
+        "id": "dXV3P8pUyzE_",
+        "outputId": "73815a5d-d4e5-4fcc-dd90-312cc94eb928"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It looks like you are running Gradio on a hosted a Jupyter notebook. For the Gradio app to work, sharing must be enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
+            "\n",
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "* Running on public URL: https://75e52e61e98ed6ce77.gradio.live\n",
+            "\n",
+            "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://75e52e61e98ed6ce77.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     }
   ]
 }
